--- a/03-rest-client/currency-exchange-rates/src/main/resources/META-INF/resources/index.html
+++ b/03-rest-client/currency-exchange-rates/src/main/resources/META-INF/resources/index.html
@@ -134,7 +134,6 @@
                 <div class="provided-code">
             <h3>RESTEasy JAX-RS</h3>
             <p>Easily start your RESTful Web Services</p>
-            <p><code>@Path: <a href="/hello" class="path-link" target="_blank">/hello</a></code></p>
             <p><a href="https://quarkus.io/guides/getting-started#the-jax-rs-resources" class="guide-link" target="_blank">Related guide section...</a></p>
         </div>
 
@@ -144,7 +143,7 @@
             <h3>Application</h3>
             <ul>
                 <li>GroupId: <code>enit.rhaddad</code></li>
-                <li>ArtifactId: <code>intro-rest</code></li>
+                <li>ArtifactId: <code>currency-exchange</code></li>
                 <li>Version: <code>1.0.0-SNAPSHOT</code></li>
                 <li>Quarkus Version: <code>2.2.3.Final</code></li>
             </ul>
